# socratic

./: .agentic.lock.json  AGENTS.md  README.md
socratic-cli/: .gitignore  README.md  pyproject.toml
socratic-cli/socratic_cli/: __init__.py  __main__.py  client.py  inspect_pdf.py  main.py
socratic-cli/tests/: conftest.py  test_cli_persistence.py  test_config_import_opencode.py  test_full_flow.py  test_next_block.py  test_previous_block.py
socratic-server/: .gitignore  README.md  main.py  pyproject.toml
socratic-server/docs/: api.md
socratic-server/socratic/config/: settings.py
socratic-server/socratic/domain/: models.py
socratic-server/socratic/pdf/: parser.py
socratic-server/socratic/storage/: database.py
socratic-server/src/socratic/: app.py
socratic-server/src/socratic/api/: ask.py  documents.py  interact.py  retrieval.py  studies.py
socratic-server/src/socratic/config/: settings.py
socratic-server/src/socratic/document_processing/: adapter.py  classifier.py  extractor.py  formatters.py  model.py
socratic-server/src/socratic/domain/: models.py
socratic-server/src/socratic/llm/: __init__.py  base.py  openai_client.py
socratic-server/tests/: test_ask.py  test_document.py  test_document_adapter.py  test_document_delete.py  test_e2e_import.py  test_interact.py  test_llm.py  test_orchestrator.py  test_orchestrator_tools.py  test_persistence.py  test_registry.py  test_retrieval.py  test_study.py
socratic-server/tests/test_document_processing/: test_classifier.py  test_extractor.py  test_formatters.py  test_integration.py  test_list_grouping.py
(+46 files in other folders)
