[project]
name = "socratic-cli"
version = "0.1.0"
description = "Cliente CLI de Socratic — consume la API pública del servidor"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "uvicorn[standard]>=0.29,<1",
    "fastapi>=0.110,<1",
    "pdfplumber>=0.11,<1",
    "fpdf2>=2.7,<3",
]

[project.scripts]
socratic = "socratic_cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
