[project]
name = "socratic-server"
version = "0.1.0"
description = "Servidor de Socratic — estudio interactivo de documentos PDF"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pdfplumber>=0.11,<1",
    "pydantic>=2.0,<3",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "fpdf2>=2.7,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
